...
                DropdownMenuItem(
                  value: 'VND',
                  child: Text('VND'),
                ),
                DropdownMenuItem(
                  value: '\$',
                  child: Text('USD'),
                ),
                DropdownMenuItem(
                  value: 'EUR',
                  child: Text('EUR'),
                ),
                DropdownMenuItem(
...
                        .replaceAll('.', '')
                        .replaceAll(',', '.')),
                    description: widget.description,
                    date: widget.date,
                    categoryId: widget.categoryId,
                  );
                  _showSnackBar("Chi tiêu đã được tạo thành công");
                  Navigator.pop(context);
                } catch (e) {
                  _showSnackBar("Lỗi: $e");
                }
              },
              style: ElevatedButton.styleFrom(
                backgroundColor: Colors.black,
                minimumSize: const Size(double.infinity, 50),
                shape: RoundedRectangleBorder(
                    borderRadius: BorderRadius.circular(12)),
              ),
              child: const Text("Lưu chi tiêu",
                  style: TextStyle(color: Colors.white, fontSize: 16)),
            ),
          ],
        ),
      ),
    );
...
